feat: more sandpacks
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/content/drag-and-drop-in-react-with-dnd-kit.mdx
+++ b/content/drag-and-drop-in-react-with-dnd-kit.mdx
@@ -370,7 +370,7 @@ export function App() {
 
 A user interface allows users to pick up and drag an element into designated droppable areas
 
-<FreeDnDSandPack />
+<DroppableDndSandPack />
 
 <Callout intent='default' dropdown heading='Code Breakdown'>
 To build this, we'll need to create both draggable and droppable components. The draggable component is similar to the one we made in the free DnD example above. To create a droppable component, we'll use the `useDropabale` hook. Similar to the Draggable component, this component takes a unique ID as props:
